캐싱처리할 이미지, 영상 소스 추가

--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,11 @@
 </body>
 
 </html>
+
+<!-- 
+  - 미리 캐싱처리가 되야되는 고해상도 이미지, 영상소스 url을 배열로 준비
+  - react가 아닌 index.html에서 defaults라는 프레임 안에 배열에 있는 이미지, 영상을 동적으로 강제DOM생성
+  - DOM이 생성되면서 수반되는 영상, 소스이미지가 브라우저에 캐싱되는 동안 mask화면 보여줌
+  - 모든 영상, 이미지소스가 캐싱완료되면  마스크와 강제로 만들어진 DOM프레임인 defaults를 모두 제거
+  - 그 사이 React컴포넌트 파일들이  모두 리얼돔으로 변환되서 화면에 출력됨
+ -->
