--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>React App</title>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0aed7cff3e69be6d99e79138ccf791f5"></script>
+  <style>
+    .default {
+      position: absolute;
+      top: -99999px;
+    }
+
+    .mask {
+      width: 100%;
+      height: 100vh;
+      background: #111;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 5;
+      opacity: 1;
+      transition: opacity 2s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font: 18px/1 'arial';
+      color: #fff;
+    }
+  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div class="default"></div>
+  <div class="mask">LOADING...</div>
+
+  <script>
+    const baseURL = 'https://react2205weekend.github.io/react_may';
+    const imgs = [
+      baseURL + '/img/Community.jpg',
+      baseURL + '/img/Department.jpg',
+      baseURL + '/img/Gallery.jpg',
+      baseURL + '/img/Join.jpg',
+      baseURL + '/img/Location.jpg',
+      baseURL + '/img/Youtube.jpg',
+    ];
+
+    const vids = [
+      baseURL + '/img/vid1.mp4',
+      baseURL + '/img/vid2.mp4',
+    ];
+
+    const lenImg = imgs.length;
+    const lenVid = vids.length;
+
+    const defaults = document.querySelector('.default');
+    const mask = document.querySelector('.mask');
+  </script>
 </body>
 
 </html>
