--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
       font: 18px/1 'arial';
       color: #fff;
     }
+
+    .mask.off {
+      opacity: 0;
+    }
   </style>
 </head>
 
@@ -64,6 +68,23 @@
     //DOM생성
     createDOM();
 
+    //Promise.all()로 loadImg, loadVid 함수가 모두 프로미스객체를 반활할때까지 기다리면서 동기화처리
+    Promise.all([loadImg(), loadVid()]).then(result => {
+      //각 함수의 리턴값을 비구조화할당으로 변수에 각각저장
+      console.log(result);
+
+      //두개의 값이 모두 true면 (모든 DOM소스가 로딩완료되면)
+      if (loadImg && loadVid) {
+        console.log('mask-hide');
+        mask.classList.add('off');
+
+        setTimeout(() => {
+          mask.remove();
+          defaults.remove();
+        }, 2000)
+      }
+    })
+
     //DOM생성함수
     function createDOM() {
       imgs.forEach(src => {
@@ -84,7 +105,7 @@
         imgDOM.forEach(img => {
           img.onload = () => {
             countImg++;
-            console.log('img loaded', countImg;
+            console.log('img loaded', countImg);
             if (countImg === lenImg) {
               res(true);
             }
